public/analytics-pro/v0.13/_sources/reference/tmlt/analytics/metrics/_base/index.rst.txt
:orphan:


..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024


************
_base
************

.. py:module:: tmlt.analytics.metrics._base

.. autoapi-nested-parse::

   Base classes for metrics.











Classes
=======

.. list-table::

   * - :class:`.Metric`
     - A generic metric.
   * - :class:`.MetricResult`
     - An output of a Metric with additional metadata.
   * - :class:`.MetricResultDataframe`
     - A table version of a metric's results.
   * - :class:`.SingleBaselineMetric`
     - Base class for metrics computed from DP outputs and a single baseline’s outputs.
   * - :class:`.MultiBaselineMetric`
     - Base class for metrics computed from DP outputs and multiple baseline outputs.
   * - :class:`.JoinedOutputMetric`
     - Base class for metrics computed from join between single DP and baseline output.
   * - :class:`.GroupedMetric`
     - Base class for metrics that can be computed on each group in a joined output.
   * - :class:`.MeasureColumnMetric`
     - Base class for metrics that are computed on a single measure column.
   * - :class:`.ScalarMetric`
     - Base class for metrics computed from outputs containing only one value.

   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: Metric(name, description, baselines)

   Bases: :class:`abc.ABC`

   A generic metric.

   .. note::

       |PRO_NOTE|






   .. automethod:: __init__
   .. py:method:: name()
      :property:

      Returns the name of the metric.


   .. py:method:: description()
      :property:

      Returns the description of the metric.


   .. py:method:: baselines()
      :property:

      Returns the baselines used for the metric.


   .. py:method:: format(value)
      :abstractmethod:

      Converts value to human-readable format.


   .. py:method:: format_as_table_row(result)
      :abstractmethod:

      Return a table row summarizing the metric result.


   .. py:method:: format_as_dataframe(result)

      Returns the results of this metric formatted as a dataframe.


   .. py:method:: check_compatibility_with_data(dp_outputs, baseline_outputs)
      :abstractmethod:

      Check that the outputs have all the structure the metric expects.

      Should throw a ValueError if the metric is not compatible.


   .. py:method:: __call__(dp_outputs, baseline_outputs, unprotected_inputs = None, program_parameters = None)

      Computes the given metric on the given DP and baseline outputs.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs.
      :param unprotected_inputs: Optional public dataframes used in error computation.
      :param program_parameters: Optional program specific parameters used in
                                 error computation.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: MetricResult

   An output of a Metric with additional metadata.

   .. note::

       💡 |PRO_NOTE|





   .. py:attribute:: name
      :annotation: :str

      The name of the metric.

   .. py:attribute:: description
      :annotation: :str

      The description of the metric.

   .. py:attribute:: baseline
      :annotation: :Union[str, List[str]]

      The name of the baseline program(s) used for the error report.

   .. py:attribute:: metric
      :annotation: :Metric

      The metric that was used.

   .. py:attribute:: value
      :annotation: :Any

      The value of the metric applied to the program outputs.


   .. py:method:: format_as_table_row()

      Return a table row summarizing the metric result.


   .. py:method:: format_as_dataframe()

      Returns the results of this metric formatted as a dataframe.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: MetricResultDataframe

   Bases: :class:`NamedTuple`

   A table version of a metric's results.





   .. py:attribute:: df
      :annotation: :pandas.DataFrame

      The results, formatted as a dataframe.

   .. py:attribute:: value_column
      :annotation: :str

      The name of the column containing the metric value.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: SingleBaselineMetric(name, description, baselines)

   Bases: :class:`Metric`, :class:`abc.ABC`

   Base class for metrics computed from DP outputs and a single baseline’s outputs.

   .. note::

       |PRO_NOTE|

   Subclasses of ``SingleBaselineMetric`` define a ``compute_for_baseline`` method
   from DP outputs and one baseline's outputs to the metric value.






   .. automethod:: __init__
   .. py:method:: check_compatibility_with_outputs(outputs, output_name)
      :abstractmethod:

      Check that a particular output is compatible with the metric.

      Should throw a ValueError if the metric is not compatible.


   .. py:method:: check_compatibility_with_data(dp_outputs, baseline_outputs)

      Check that the outputs have all the structure the metric expects.

      Should throw a ValueError if the metric is not compatible.


   .. py:method:: name()
      :property:

      Returns the name of the metric.


   .. py:method:: description()
      :property:

      Returns the description of the metric.


   .. py:method:: baselines()
      :property:

      Returns the baselines used for the metric.


   .. py:method:: format(value)
      :abstractmethod:

      Converts value to human-readable format.


   .. py:method:: format_as_table_row(result)
      :abstractmethod:

      Return a table row summarizing the metric result.


   .. py:method:: format_as_dataframe(result)

      Returns the results of this metric formatted as a dataframe.


   .. py:method:: __call__(dp_outputs, baseline_outputs, unprotected_inputs = None, program_parameters = None)

      Computes the given metric on the given DP and baseline outputs.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs.
      :param unprotected_inputs: Optional public dataframes used in error computation.
      :param program_parameters: Optional program specific parameters used in
                                 error computation.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: MultiBaselineMetric(name, description, baselines)

   Bases: :class:`Metric`, :class:`abc.ABC`

   Base class for metrics computed from DP outputs and multiple baseline outputs.

   .. note::

       |PRO_NOTE|

   Subclasses of ``MultiBaselineMetric`` define a ``compute_for_multiple_baselines``
   method from DP outputs and a collection of outputs from several baselines to the
   metric value.






   .. automethod:: __init__
   .. py:method:: compute(dp_outputs, baseline_outputs, unprotected_inputs = None, program_parameters = None)

      Computes the given metric on the given DP and baseline outputs.

      The baseline_outputs will already be filtered to only include the baselines that
      the metric is supposed to use.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs, after filtering to
                               only include the baselines that the metric is supposed to use.
      :param unprotected_inputs: Optional public dataframes used in error computation.
      :param program_parameters: Optional program specific parameters used in
                                 error computation.


   .. py:method:: name()
      :property:

      Returns the name of the metric.


   .. py:method:: description()
      :property:

      Returns the description of the metric.


   .. py:method:: baselines()
      :property:

      Returns the baselines used for the metric.


   .. py:method:: format(value)
      :abstractmethod:

      Converts value to human-readable format.


   .. py:method:: format_as_table_row(result)
      :abstractmethod:

      Return a table row summarizing the metric result.


   .. py:method:: format_as_dataframe(result)

      Returns the results of this metric formatted as a dataframe.


   .. py:method:: check_compatibility_with_data(dp_outputs, baseline_outputs)
      :abstractmethod:

      Check that the outputs have all the structure the metric expects.

      Should throw a ValueError if the metric is not compatible.


   .. py:method:: __call__(dp_outputs, baseline_outputs, unprotected_inputs = None, program_parameters = None)

      Computes the given metric on the given DP and baseline outputs.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs.
      :param unprotected_inputs: Optional public dataframes used in error computation.
      :param program_parameters: Optional program specific parameters used in
                                 error computation.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: JoinedOutputMetric(output, join_columns, name, description, baselines, join_how = 'inner', dropna_columns = None, indicator_column_name = None)

   Bases: :class:`SingleBaselineMetric`, :class:`abc.ABC`

   Base class for metrics computed from join between single DP and baseline output.

   .. note::

       |PRO_NOTE|

   Subclasses of ``JoinedOutputMetric`` define a
   ``compute_on_joined_output`` method which takes in a single dataframe, the
   result of joining the DP and baseline output tables with the given name on
   the given list of columns, and returns the metric value. The joined table is
   the result of performing a join (default inner join) between the DP and baseline
   tables on the given join columns.



   .. list-table:: Methods

      * - :meth:`.output`
        - Returns the name of the run output or view name.
      * - :meth:`.join_columns`
        - Returns the name of the join columns.
      * - :meth:`.indicator_column_name`
        - Returns the name of the indicator column.
      * - :meth:`.check_compatibility_with_outputs`
        - Check that a particular set of outputs is compatible with the metric.
      * - :meth:`.check_join_key_uniqueness`
        - Check if the join keys uniquely identify rows in the joined DataFrame.
      * - :meth:`.compute_for_baseline`
        - Computes metric value.
      * - :meth:`.format_as_table_row`
        - Return a table row summarizing the metric result.
      * - :meth:`.check_compatibility_with_data`
        - Check that the outputs have all the structure the metric expects.
      * - :meth:`.name`
        - Returns the name of the metric.
      * - :meth:`.description`
        - Returns the description of the metric.
      * - :meth:`.baselines`
        - Returns the baselines used for the metric.
      * - :meth:`.format`
        - Converts value to human-readable format.
      * - :meth:`.format_as_dataframe`
        - Returns the results of this metric formatted as a dataframe.
      * - :meth:`.__call__`
        - Computes the given metric on the given DP and baseline outputs.




   .. automethod:: __init__
   .. py:method:: output()
      :property:

      Returns the name of the run output or view name.


   .. py:method:: join_columns()
      :property:

      Returns the name of the join columns.


   .. py:method:: indicator_column_name()
      :property:

      Returns the name of the indicator column.


   .. py:method:: check_compatibility_with_outputs(outputs, output_name)

      Check that a particular set of outputs is compatible with the metric.

      Should throw a ValueError if the metric is not compatible.


   .. py:method:: check_join_key_uniqueness(joined_output)

      Check if the join keys uniquely identify rows in the joined DataFrame.


   .. py:method:: compute_for_baseline(baseline_name, dp_outputs, baseline_outputs, unprotected_inputs = None, program_parameters = None)

      Computes metric value.


   .. py:method:: format_as_table_row(result)

      Return a table row summarizing the metric result.


   .. py:method:: check_compatibility_with_data(dp_outputs, baseline_outputs)

      Check that the outputs have all the structure the metric expects.

      Should throw a ValueError if the metric is not compatible.


   .. py:method:: name()
      :property:

      Returns the name of the metric.


   .. py:method:: description()
      :property:

      Returns the description of the metric.


   .. py:method:: baselines()
      :property:

      Returns the baselines used for the metric.


   .. py:method:: format(value)
      :abstractmethod:

      Converts value to human-readable format.


   .. py:method:: format_as_dataframe(result)

      Returns the results of this metric formatted as a dataframe.


   .. py:method:: __call__(dp_outputs, baseline_outputs, unprotected_inputs = None, program_parameters = None)

      Computes the given metric on the given DP and baseline outputs.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs.
      :param unprotected_inputs: Optional public dataframes used in error computation.
      :param program_parameters: Optional program specific parameters used in
                                 error computation.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: GroupedMetric(output, join_columns, name, description, baselines, grouping_columns = None, join_how = 'inner', dropna_columns = None, indicator_column_name = None)

   Bases: :class:`JoinedOutputMetric`, :class:`abc.ABC`

   Base class for metrics that can be computed on each group in a joined output.

   .. note::

       |PRO_NOTE|

   Subclasses of ``GroupedMetric`` define a
   ``compute_on_grouped_output`` method which takes in a single grouped dataframe,
   the result of joining the DP and baseline output tables with the given name on
   the given list of columns and grouping by the grouping column, and returns
   the metric value. The joined table is
   the result of performing an *inner* join between the DP and baseline tables
   on the given join columns.



   .. list-table:: Methods

      * - :meth:`.grouping_columns`
        - Returns the names of the grouping columns.
      * - :meth:`.check_compatibility_with_outputs`
        - Check that a particular set of outputs is compatible with the metric.
      * - :meth:`.compute_on_grouped_output`
        - Computes metric value from the joined, grouped DP and baseline output.
      * - :meth:`.format_as_table_row`
        - Return a table row summarizing the metric result.
      * - :meth:`.format_as_dataframe`
        - Returns the results of this metric formatted as a dataframe.
      * - :meth:`.output`
        - Returns the name of the run output or view name.
      * - :meth:`.join_columns`
        - Returns the name of the join columns.
      * - :meth:`.indicator_column_name`
        - Returns the name of the indicator column.
      * - :meth:`.check_join_key_uniqueness`
        - Check if the join keys uniquely identify rows in the joined DataFrame.
      * - :meth:`.compute_for_baseline`
        - Computes metric value.
      * - :meth:`.check_compatibility_with_data`
        - Check that the outputs have all the structure the metric expects.
      * - :meth:`.name`
        - Returns the name of the metric.
      * - :meth:`.description`
        - Returns the description of the metric.
      * - :meth:`.baselines`
        - Returns the baselines used for the metric.
      * - :meth:`.format`
        - Converts value to human-readable format.
      * - :meth:`.__call__`
        - Computes the given metric on the given DP and baseline outputs.




   .. automethod:: __init__
   .. py:method:: grouping_columns()
      :property:

      Returns the names of the grouping columns.


   .. py:method:: check_compatibility_with_outputs(outputs, output_name)

      Check that a particular set of outputs is compatible with the metric.

      Should throw a ValueError if the metric is not compatible.


   .. py:method:: compute_on_grouped_output(grouped_output, baseline_name, unprotected_inputs = None, program_parameters = None)
      :abstractmethod:

      Computes metric value from the joined, grouped DP and baseline output.

      If grouping columns are empty, the grouped output will have one group that
      is the entire dataset.


   .. py:method:: format_as_table_row(result)

      Return a table row summarizing the metric result.


   .. py:method:: format_as_dataframe(result)

      Returns the results of this metric formatted as a dataframe.


   .. py:method:: output()
      :property:

      Returns the name of the run output or view name.


   .. py:method:: join_columns()
      :property:

      Returns the name of the join columns.


   .. py:method:: indicator_column_name()
      :property:

      Returns the name of the indicator column.


   .. py:method:: check_join_key_uniqueness(joined_output)

      Check if the join keys uniquely identify rows in the joined DataFrame.


   .. py:method:: compute_for_baseline(baseline_name, dp_outputs, baseline_outputs, unprotected_inputs = None, program_parameters = None)

      Computes metric value.


   .. py:method:: check_compatibility_with_data(dp_outputs, baseline_outputs)

      Check that the outputs have all the structure the metric expects.

      Should throw a ValueError if the metric is not compatible.


   .. py:method:: name()
      :property:

      Returns the name of the metric.


   .. py:method:: description()
      :property:

      Returns the description of the metric.


   .. py:method:: baselines()
      :property:

      Returns the baselines used for the metric.


   .. py:method:: format(value)
      :abstractmethod:

      Converts value to human-readable format.


   .. py:method:: __call__(dp_outputs, baseline_outputs, unprotected_inputs = None, program_parameters = None)

      Computes the given metric on the given DP and baseline outputs.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs.
      :param unprotected_inputs: Optional public dataframes used in error computation.
      :param program_parameters: Optional program specific parameters used in
                                 error computation.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: MeasureColumnMetric(output, join_columns, measure_column, name, description, baselines, grouping_columns = None, join_how = 'inner', dropna_columns = None)

   Bases: :class:`GroupedMetric`, :class:`abc.ABC`

   Base class for metrics that are computed on a single measure column.

   .. note::

       |PRO_NOTE|




   .. list-table:: Methods

      * - :meth:`.measure_column`
        - Returns the names of the grouping columns.
      * - :meth:`.check_compatibility_with_outputs`
        - Check that a particular set of outputs is compatible with the metric.
      * - :meth:`.format_as_table_row`
        - Return a table row summarizing the metric result.
      * - :meth:`.format_as_dataframe`
        - Returns the results of this metric formatted as a dataframe.
      * - :meth:`.grouping_columns`
        - Returns the names of the grouping columns.
      * - :meth:`.compute_on_grouped_output`
        - Computes metric value from the joined, grouped DP and baseline output.
      * - :meth:`.output`
        - Returns the name of the run output or view name.
      * - :meth:`.join_columns`
        - Returns the name of the join columns.
      * - :meth:`.indicator_column_name`
        - Returns the name of the indicator column.
      * - :meth:`.check_join_key_uniqueness`
        - Check if the join keys uniquely identify rows in the joined DataFrame.
      * - :meth:`.compute_for_baseline`
        - Computes metric value.
      * - :meth:`.check_compatibility_with_data`
        - Check that the outputs have all the structure the metric expects.
      * - :meth:`.name`
        - Returns the name of the metric.
      * - :meth:`.description`
        - Returns the description of the metric.
      * - :meth:`.baselines`
        - Returns the baselines used for the metric.
      * - :meth:`.format`
        - Converts value to human-readable format.
      * - :meth:`.__call__`
        - Computes the given metric on the given DP and baseline outputs.




   .. automethod:: __init__
   .. py:method:: measure_column()
      :property:

      Returns the names of the grouping columns.


   .. py:method:: check_compatibility_with_outputs(outputs, output_name)

      Check that a particular set of outputs is compatible with the metric.

      Should throw a ValueError if the metric is not compatible.


   .. py:method:: format_as_table_row(result)

      Return a table row summarizing the metric result.


   .. py:method:: format_as_dataframe(result)

      Returns the results of this metric formatted as a dataframe.


   .. py:method:: grouping_columns()
      :property:

      Returns the names of the grouping columns.


   .. py:method:: compute_on_grouped_output(grouped_output, baseline_name, unprotected_inputs = None, program_parameters = None)
      :abstractmethod:

      Computes metric value from the joined, grouped DP and baseline output.

      If grouping columns are empty, the grouped output will have one group that
      is the entire dataset.


   .. py:method:: output()
      :property:

      Returns the name of the run output or view name.


   .. py:method:: join_columns()
      :property:

      Returns the name of the join columns.


   .. py:method:: indicator_column_name()
      :property:

      Returns the name of the indicator column.


   .. py:method:: check_join_key_uniqueness(joined_output)

      Check if the join keys uniquely identify rows in the joined DataFrame.


   .. py:method:: compute_for_baseline(baseline_name, dp_outputs, baseline_outputs, unprotected_inputs = None, program_parameters = None)

      Computes metric value.


   .. py:method:: check_compatibility_with_data(dp_outputs, baseline_outputs)

      Check that the outputs have all the structure the metric expects.

      Should throw a ValueError if the metric is not compatible.


   .. py:method:: name()
      :property:

      Returns the name of the metric.


   .. py:method:: description()
      :property:

      Returns the description of the metric.


   .. py:method:: baselines()
      :property:

      Returns the baselines used for the metric.


   .. py:method:: format(value)
      :abstractmethod:

      Converts value to human-readable format.


   .. py:method:: __call__(dp_outputs, baseline_outputs, unprotected_inputs = None, program_parameters = None)

      Computes the given metric on the given DP and baseline outputs.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs.
      :param unprotected_inputs: Optional public dataframes used in error computation.
      :param program_parameters: Optional program specific parameters used in
                                 error computation.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: ScalarMetric(output, name, description, column = None, baselines = None)

   Bases: :class:`SingleBaselineMetric`, :class:`abc.ABC`

   Base class for metrics computed from outputs containing only one value.

   .. note::

       |PRO_NOTE|

   Subclasses of ``ScalarMetric`` define a ``compute_on_scalar`` method
   which takes two values, each one taken from the given column of the given
   output, and returns a metric value. The given output *must* contain a single
   row in both the DP and baseline outputs.



   .. list-table:: Methods

      * - :meth:`.output`
        - Returns the name of the run output or view name.
      * - :meth:`.column`
        - Returns the name of the value column, if it is set.
      * - :meth:`.check_compatibility_with_outputs`
        - Check that a particular set of outputs is compatible with the metric.
      * - :meth:`.compute_for_baseline`
        - Returns the metric value given the DP outputs and the baseline outputs.
      * - :meth:`.check_compatibility_with_data`
        - Check that the outputs have all the structure the metric expects.
      * - :meth:`.name`
        - Returns the name of the metric.
      * - :meth:`.description`
        - Returns the description of the metric.
      * - :meth:`.baselines`
        - Returns the baselines used for the metric.
      * - :meth:`.format`
        - Converts value to human-readable format.
      * - :meth:`.format_as_table_row`
        - Return a table row summarizing the metric result.
      * - :meth:`.format_as_dataframe`
        - Returns the results of this metric formatted as a dataframe.
      * - :meth:`.__call__`
        - Computes the given metric on the given DP and baseline outputs.




   .. automethod:: __init__
   .. py:method:: output()
      :property:

      Returns the name of the run output or view name.


   .. py:method:: column()
      :property:

      Returns the name of the value column, if it is set.


   .. py:method:: check_compatibility_with_outputs(outputs, output_name)

      Check that a particular set of outputs is compatible with the metric.

      Should throw a ValueError if the metric is not compatible.


   .. py:method:: compute_for_baseline(baseline_name, dp_outputs, baseline_outputs, unprotected_inputs = None, program_parameters = None)

      Returns the metric value given the DP outputs and the baseline outputs.


   .. py:method:: check_compatibility_with_data(dp_outputs, baseline_outputs)

      Check that the outputs have all the structure the metric expects.

      Should throw a ValueError if the metric is not compatible.


   .. py:method:: name()
      :property:

      Returns the name of the metric.


   .. py:method:: description()
      :property:

      Returns the description of the metric.


   .. py:method:: baselines()
      :property:

      Returns the baselines used for the metric.


   .. py:method:: format(value)
      :abstractmethod:

      Converts value to human-readable format.


   .. py:method:: format_as_table_row(result)
      :abstractmethod:

      Return a table row summarizing the metric result.


   .. py:method:: format_as_dataframe(result)

      Returns the results of this metric formatted as a dataframe.


   .. py:method:: __call__(dp_outputs, baseline_outputs, unprotected_inputs = None, program_parameters = None)

      Computes the given metric on the given DP and baseline outputs.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs.
      :param unprotected_inputs: Optional public dataframes used in error computation.
      :param program_parameters: Optional program specific parameters used in
                                 error computation.







